fix(fido2): packed full attestation(x5c) non-strict 수용 + crossOrigin 결과 노출
Codex 리뷰 P2 2건 수정:
- non-strict 경로가 x5c packed full attestation을 거부하던 회귀 — webauthn4j
  non-strict와 동일하게 cert chain trust 검증 없이 attestation cert 공개키로
  서명만 검증해 수용. PackedSelfAttestationVerifier → PackedAttestationVerifier.
- clientDataJSON.crossOrigin을 Registration/AuthenticationVerificationResult에
  노출 — 코어는 값만 반환, cross-origin 정책 판단은 호출자 몫(경계 원칙 유지).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>